test/isabelle/negative-tests/apostrophe.p
module Apostrophe {


  o': any -> any -> any

}